vlib/v/checker/tests/invalid_parameter_name_err.out
vlib/v/checker/tests/invalid_parameter_name_err.vv:4:24: error: invalid use of reserved type `char` as a parameter name
    2 | }
    3 |
    4 | fn (mut b Buffer) put8(char u8) ? {
      |                        ~~~~
    5 |     return error('-')
    6 | }
vlib/v/checker/tests/invalid_parameter_name_err.vv:10:6: error: invalid use of reserved type `char` as a parameter name
    8 | interface Writer {
    9 | mut:
   10 |     put(char u8)?
      |         ~~~~
   11 | }
   12 |
