vlib/v/checker/tests/invalid_parameter_name_err.vv
struct Buffer {
}

fn (mut b Buffer) put8(char u8) ? {
	return error('-')
}

interface Writer {
mut:
	put(char u8)?
}

fn main() {
}
